added audit log for user account creation
