# src/modules/manager/user_account/controllers/user_accountV2.controller.ts
@@ -1,21 +1,11 @@
-import {
-  Controller,
-  Body,
-  Post,
-  Get,
-  Put,
-  ParseUUIDPipe,
-  Param,
-} from '@nestjs/common';
-import { CreateUserWithRolePermissionDto } from '../dto/create-user-with-role-permission.dto';
+import { Controller, Body, Post, Get, Put, Req } from '@nestjs/common';
 import { UserAccountService } from '../user_account.service';
-import { RequestUser } from 'src/utils/types/request-user.interface';
 import {
-  DeactivateUserAccountDto,
-  ReactivateUserAccountDto,
-} from '../dto/user-account-status.dto';
-import { UserEmailResetTokenDto } from '../dto/user-email.reset-token.dto';
-import { ApiBearerAuth, ApiBody, ApiOperation, ApiTags } from '@nestjs/swagger';
+  ApiBearerAuth,
+  ApiBody,
+  ApiOperation,
+  ApiTags,
+} from '@nestjs/swagger';
 import {
   ApiGetResponse,
   ApiPostResponse,
@@ -23,7 +13,12 @@ import {
   ApiDeactivateResponse,
   ApiActivateResponse,
 } from 'src/utils/helpers/swagger-response.helper';
+
+import { DeactivateUserAccountDto, ReactivateUserAccountDto, } from '../dto/user-account-status.dto';
+import { CreateUserWithRolePermissionDto } from '../dto/create-user-with-role-permission.dto';
+import { UserEmailResetTokenDto } from '../dto/user-email.reset-token.dto';
 import { AddUserRolePermissionsDto } from '../dto/add-user-role-permissions.dto';
+
 import {
   ACTION_READ,
   ACTION_CREATE,
@@ -33,7 +28,10 @@ import {
 } from 'src/utils/constants/ability.constant';
 import { SecurityClearance } from 'src/middleware/security_clearance/security-clearance.decorator';
 import { Can } from 'src/utils/decorators/can.decorator';
+
 import { SessionUser } from 'src/utils/decorators/session-user.decorator';
+import { RequestUser } from 'src/utils/types/request-user.interface';
+import { Request } from 'express';
 
 @ApiTags('Manager - User Account')
 @Controller({ path: 'user', version: '2' })
@@ -42,7 +40,7 @@ export class UserAccountControllerV2 {
 
   //view user accounts
   //to set up viewuser accounts in service
-  @Get('user_account')
+  @Get('user')
   @ApiOperation({ summary: 'Get User Accounts' })
   @ApiGetResponse('Here are all the User Accounts available')
   @ApiSecurityClearance(SEC_LVL_5)
@@ -52,7 +50,7 @@ export class UserAccountControllerV2 {
     return this.userAccountService.viewUserAccount(user);
   }
 
-  @Get('user_account/me/permissions')
+  @Get('user/me/permissions')
   @ApiOperation({ summary: 'My User Account' })
   @ApiGetResponse('My user account')
   @ApiSecurityClearance(SEC_LVL_5)
@@ -63,7 +61,7 @@ export class UserAccountControllerV2 {
   }
 
   //create user account
-  @Post('user_account')
+  @Post('create-user-account')
   @ApiBody({
     type: CreateUserWithRolePermissionDto,
     description: 'Payload to create User Account',
@@ -75,16 +73,19 @@ export class UserAccountControllerV2 {
   @Can({ action: ACTION_CREATE, subject: USER_ACCOUNT })
   createUser(
     @Body() createUserWithRolePermissionDto: CreateUserWithRolePermissionDto,
-    @SessionUser() requestUser: RequestUser,
+    @SessionUser() user: RequestUser,
+    @Req() req: Request,
   ) {
     return this.userAccountService.createUserAccount(
       createUserWithRolePermissionDto,
-      requestUser,
+      user,
+      req,
+      user,
     );
   }
 
   //ADDING ROLE PERMISSION TO USER AFTER USER ACCOUNT CREATION
-  @Post('user_account/role_permission')
+  @Post('user/role_permission')
   @ApiOperation({ summary: 'Add Role permissions to user' })
   @ApiPostResponse('Role permission added to user successfully')
   @ApiSecurityClearance(SEC_LVL_5)
@@ -101,22 +102,8 @@ export class UserAccountControllerV2 {
     );
   }
 
-  @Put('user_account/add-role/:userId/:roleName')
-  @ApiOperation({ summary: 'Add Role to user' })
-  @ApiPostResponse('Role has been added to the user with permission')
-  @ApiSecurityClearance(SEC_LVL_5)
-  @SecurityClearance(SEC_LVL_5)
-  @Can({ action: ACTION_CREATE, subject: USER_ACCOUNT })
-  addUserRole(
-    @SessionUser() requestUser: RequestUser,
-    @Param('userId', new ParseUUIDPipe()) userId: string,
-    @Param('roleName') roleName: string,
-  ) {
-    return this.userAccountService.addRoleUser(requestUser, userId, roleName);
-  }
-
   //for expired first time login reset token key
-  @Post('user_account/new_reset_token')
+  @Post('user/new_reset_token')
   @ApiBody({
     type: UserEmailResetTokenDto,
     description: 'Payload for new user reset token',
@@ -140,7 +127,7 @@ export class UserAccountControllerV2 {
 
   // view user tokens
   // to set up view user token keys in service
-  @Get('user_account/token_keys')
+  @Get('user/token_keys')
   @ApiOperation({ summary: 'Get the token keys for this user' })
   @ApiGetResponse('Here are all the token keys available for this user')
   @ApiSecurityClearance(SEC_LVL_5)
@@ -149,14 +136,17 @@ export class UserAccountControllerV2 {
   viewUserKeys(
     @Body() createUserWithTemplateDto: CreateUserWithRolePermissionDto,
     @SessionUser() user: RequestUser,
+    @Req() req: Request,
   ) {
     return this.userAccountService.createUserAccount(
       createUserWithTemplateDto,
       user,
+      req,
+      user,
     );
   }
 
-  @Put('user_account/deactivate')
+  @Put('user/deactivate')
   @ApiOperation({ summary: 'Deactivate the user account' })
   @ApiDeactivateResponse('User account deactivated successfully')
   @ApiSecurityClearance(SEC_LVL_5)
@@ -171,7 +161,7 @@ export class UserAccountControllerV2 {
     );
   }
 
-  @Put('user_account/reactivate')
+  @Put('user/reactivate')
   @ApiOperation({ summary: 'Reactivate the user account' })
   @ApiActivateResponse('User account reactivated successfully')
   @ApiSecurityClearance(SEC_LVL_5)
@@ -186,7 +176,7 @@ export class UserAccountControllerV2 {
     );
   }
 
-  @Get('user_account/new_employees')
+  @Get('user/new_employees')
   @ApiOperation({ summary: 'Get the new employees without user accounts' })
   @ApiGetResponse('Here are the list of new employees without user accounts')
   @ApiSecurityClearance(SEC_LVL_5)
